# gana-ai-insurance

./: .env.example  Procfile  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: proposal.md
src/fnol/: cli.py  extractor.py  schema.py  state_manager.py  text_extractor.py
src/routing/: claim_workflow.py
src/storage/: claim_store.py
src/utils/: config.py
src/voice/: bridge.py
src/web/: chat_app.py
